# mcp-calc-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  build.sh  critical.md  examples.md  flake.nix  index.js  install-deps.sh  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
examples/: integration_examples.py
integrals-server/: README.md  deep-fix.sh  diagnose.js  fix-rebuild.sh  package-lock.json  package.json  pnpm-lock.yaml  rebuild.sh  test-client.js  tsconfig.json
integrals-server/src/: index.ts  sdk-adapter.ts
js/: README.md  package.json  pnpm-lock.yaml
js/src/: index.js
js/src/math/: calculus.js  financial.js
src/: calculus.js  finance.js  linear-algebra.js  optimization.js  pipelines.js  probability.js  server.py  transforms.js  utils.js
src/mcp_calc_tools/: __init__.py
src/mcp_calc_tools/core/: __init__.py  calculus.py  engineering.py  financial.py  test_calculus.py
src/mcp_calc_tools/server/: __init__.py  advanced_calculus.py  cli.py  mcp_extension.py  server.py
src/mcp_calc_tools/server/routes/: __init__.py  calculus_routes.py  engineering_routes.py  financial_routes.py
test/: math.test.js
tests/: conftest.py  test_integrals.py
