[project]
name = "mcp-calc-tools"
version = "0.1.0"
description = "Advanced calculus tools for MCP"
authors = [
    {name = "Nbiish Justin Kenwabikise", email = "nbiish@umich.edu"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
