[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-calc-tools"
version = "0.1.0"
description = "A collection of calculus tools for financial analysis and engineering experimentation."
authors = [
    {name = "MCP Contributors", email = "contributors@mcp.dev"}
]
keywords = ["calculus", "mathematics", "engineering", "finance", "mcp"]
readme = "README.md"
urls = {repository = "https://github.com/nbiish/mcp-calc-tools"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy",
    "numpy",
    "scipy",
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
uvx-mcp-calc = "mcp_calc_tools.server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "mcp_calc_tools",
    "mcp_calc_tools.core",
    "mcp_calc_tools.server",
    "mcp_calc_tools.server.routes"
]
